[tool.poetry]
name = "Chia Climate Token Driver"
version = "1.1.2"
description = "https://github.com/Chia-Network/climate-token-driver"
authors = [
    "Harry Hsu <stmharry@hashgreen.net>",
    "Chia Network Inc <hello@chia.net>",
]
maintainers = ["Chia Network Inc <hello@chia.net>"]
repository = "https://github.com/Chia-Network/climate-token-driver"
homepage = "https://www.chia.net/"
license = "Apache-2.0"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.115.3"
uvicorn = "^0.34.0"
SQLAlchemy = "^1.4.41"
requests = "^2.28.1"
fastapi-utils = "^0.2.1"
SQLAlchemy-Utils = "^0.38.3"
pydantic = {version = "^1.10.2", extras = ["dotenv"]}
chia-blockchain = "2.4.4"
httpx = "^0.27.2"
typing-inspect = "^0.9.0"
types-pyyaml = "^6.0.12.20240917"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# has to be disabled unfortunately due to developing chia-blockchain
# chia-dev-tools = "^1.1.1"
# chia-blockchain = { path = "./chia-blockchain", develop = true }
pytest = "^7.1.2"
commitizen = "^4.1.0"
pytest-xdist = "^3.3.1"
black = "24.3.0"
isort = "5.12.0"
flake8 = "6.1.0"
mypy = "1.11.1"
pre-commit = "3.7.1"
pyupgrade = "3.16.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "$version"
changelog_start_rev = "1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '''
^/(
    [^/]*.py
    | (app|tests)/.*\.pyi?
)$
'''
exclude = ''
