[tool.poetry]
name = "Chia Climate Token Driver"
version = "1.1.3"
description = "https://github.com/Chia-Network/climate-token-driver"
authors = [
    "Harry Hsu <stmharry@hashgreen.net>",
    "Chia Network Inc <hello@chia.net>",
]
maintainers = ["Chia Network Inc <hello@chia.net>"]
repository = "https://github.com/Chia-Network/climate-token-driver"
homepage = "https://www.chia.net/"
license = "Apache-2.0"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.115.12"
uvicorn = "^0.34.1"
SQLAlchemy = "^1.4.41"
requests = "^2.28.1"
fastapi-utils = "^0.2.1"
SQLAlchemy-Utils = "^0.41.2"
pydantic = {version = "^1.10.21", extras = ["dotenv"]}
chia-blockchain = "2.5.1"
httpx = "^0.28.1"
typing-inspect = "^0.9.0"
types-pyyaml = "^6.0.12.20250326"
types-requests = "^2.32.0.20250328"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# has to be disabled unfortunately due to developing chia-blockchain
# chia-dev-tools = "^1.1.1"
# chia-blockchain = { path = "./chia-blockchain", develop = true }
pytest = "^8.3.5"
commitizen = "^4.4.1"
pytest-xdist = "^3.3.1"
mypy = "1.15.0"
pre-commit = "4.2.0"
pyupgrade = "3.19.1"
ruff = ">=0.8.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "$version"
changelog_start_rev = "1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
